p tag overflow fix on highlight words

--- a/client/src/components/plagiarism-result/LocalHighlightedResult.css
+++ b/client/src/components/plagiarism-result/LocalHighlightedResult.css
@@ -5,7 +5,6 @@
 .highlightSpan{
     font-size: 15px;
     /* white-space:  pre-wrap; */
-    white-space: pre;
 }
 
 .hightlightSpanDiv{
