--- a/client/src/components/plagiarism/OnlineHighlightedResult.css
+++ b/client/src/components/plagiarism/OnlineHighlightedResult.css
@@ -5,7 +5,6 @@
 .highlightSpan span{
     font-size: 15px;
     /* white-space:  pre-wrap; */
-    white-space: pre;
 
 }
 
@@ -21,3 +20,10 @@
     padding:20px;
     
 }
+
+.highlightComponentDivs p{
+    white-space: normal;
+    word-break: break-all;
+    
+}
+
